--- a/WebContent/erroracct.html
+++ b/WebContent/erroracct.html
@@ -23,8 +23,8 @@
 			<div class="content">
 					<div class="row">
 						<div class="col-lg-12 col-md-12">
-                            <center><h1>Error</h1>
-                            <a href="login.jsp">Go Back</a>
+                            <center><h1>Page Not Found</h1>
+                            <a onclick="location.href='ClickLoginServlet';">Go Back</a>
                             </center>
                             
 							</div>
