--- a/WebContent/expiredpage.html
+++ b/WebContent/expiredpage.html
@@ -23,9 +23,8 @@
 			<div class="content">
 					<div class="row">
 						<div class="col-lg-12 col-md-12">
-                            <center><h1>Account Locked!</h1>
-                            <h4>Contact Administrator</h4>
-                            <a href="login.jsp">Go Back</a>
+                            <center><h1>Page has expired</h1>
+                            <a onclick="location.href='ClickLoginServlet';">Go Back</a>
                             </center>
                             
 							</div>
